# TIN_NFS_W4

./: CMakeLists.txt  Makefile  README.md  build.sh  client_test.cpp  create.cpp  delete.cpp  download.cpp  fail_test.cpp  files.txt  mynfs.cpp  mynfs.h  packet.cpp  packet.h  packet_test.cpp  queues.cpp  server.cpp  shell.cpp  test.txt  tree.cpp  upload.cpp  users
NFS/DIR1/: a.txt
